force-app/main/default/objects/Car_Part__c/Car_Part__c.object-meta.xml
<CustomObject>
    <label>Car Part</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Car Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>