force-app/main/default/objects/Car_Part__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Car Parts</relationshipLabel>
    <relationshipName>Car_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>