force-app/main/default/objects/Car_Part__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container</label>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>Car Parts</relationshipLabel>
    <relationshipName>Car_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>