force-app/main/default/objects/Car_Part__c/fields/Is_Sold__c.field-meta.xml
<CustomField>
    <fullName>Is_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sold</label>
    <type>Checkbox</type>
</CustomField>