force-app/main/default/objects/Car_Part__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Nose Cut</fullName>
            </value>
            <value>
                <fullName>Front Bumper</fullName>
            </value>
            <value>
                <fullName>Hood</fullName>
            </value>
            <value>
                <fullName>Half Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>